# python_project_template

./: Makefile  README.rst  pyproject.toml
python_project_template/: __init__.py
tests/: __init__.py  test_python_project_template.py
