[tool.poetry]
name = "python_project_template"
version = "0.1.0"
description = "Projeto modelo para Python"
authors = ["João Marcelo <joaomarceloav@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^5.10.1"
blue = "^0.9.0"
mkdocs = "^1.3.0"
prospector = "^1.7.7"
pip-audit = "^2.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
