[tool.poetry]
name = "python_project_template"
version = "0.1.0"
description = "Projeto modelo para Python"
authors = ["João Marcelo <joaomarceloav@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]
pytest = "^7"
ruff = "0.1.5"
mkdocs = "^1.4.3"
prospector = "^1.7"
pip-audit = "^2.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79

[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set.
extend-select = ["E501"]

[tool.ruff.lint.pycodestyle]
max-line-length = 300
